--- a/i3/config
+++ b/i3/config
@@ -175,6 +175,8 @@ bindsym $mod+r mode "resize"
 bindsym Print exec xfce4-screenshooter
 for_window[instance="xfce4-screenshooter"] floating enable
 
+bindcode 37+64+53 exec xscreensaver-command -lock
+
 ##### Startup ######
 
 exec --no-startup-id tint2 &
