--- a/terminator/config
+++ b/terminator/config
@@ -1,20 +1,20 @@
 [global_config]
   dbus = True
   title_transmit_bg_color = "#cfcfcf"
-  inactive_color_offset = 1.2
-  title_transmit_fg_color = "#cfcfcf"
+  inactive_color_offset = 0.94
+  title_transmit_fg_color = "#f3ebeb"
 [keybindings]
   split_vert = <Primary><Shift>e
 [profiles]
   [[default]]
-    palette = "#073642:#dc322f:#859900:#b58900:#268bd2:#d33682:#2aa198:#eee8d5:#002b36:#cb4b16:#586e75:#657b83:#839496:#6c71c4:#93a1a1:#fdf6e3"
+    palette = "#000000:#aa0000:#00aa00:#aa5500:#0000aa:#aa00aa:#00aaaa:#aaaaaa:#555555:#ff5555:#55ff55:#ffff55:#5555ff:#ff55ff:#55ffff:#ffffff"
     background_image = None
-    background_darkness = 0.67
+    background_darkness = 0.47
     scrollback_lines = 1000
     background_type = transparent
     use_system_font = False
     cursor_color = "#09ef0b"
-    foreground_color = "#fef5f5"
+    foreground_color = "#ffffff"
     show_titlebar = False
     font = DejaVu Sans Mono 10
     scrollback_infinite = True
