--- a/terminator/config
+++ b/terminator/config
@@ -9,7 +9,7 @@
   [[default]]
     palette = "#000000:#aa0000:#00aa00:#aa5500:#0000aa:#aa00aa:#00aaaa:#aaaaaa:#555555:#ff5555:#55ff55:#ffff55:#5555ff:#ff55ff:#55ffff:#ffffff"
     background_image = None
-    background_darkness = 0.47
+    background_darkness = 0.56
     scrollback_lines = 1000
     background_type = transparent
     use_system_font = False
@@ -17,6 +17,7 @@
     foreground_color = "#ffffff"
     show_titlebar = False
     font = DejaVu Sans Mono 10
+    audible_bell = True
     scrollback_infinite = True
 [layouts]
   [[default]]
