--- a/i3/config
+++ b/i3/config
@@ -183,3 +183,4 @@ exec --no-startup-id tint2 &
 exec --no-startup-id compton -c --config /home/nick/.config/compton/config &
 exec --no-startup-id feh --bg-fill --randomize /home/nick/pictues/f1 
 exec --no-startup-id xscreensaver -no-splash
+exec --no-startup-id volwheel
