fix transparency settings for legibility

--- a/compton/config
+++ b/compton/config
@@ -15,17 +15,18 @@ shadow-exclude = [
 	"class_g = 'Conky'",
 	"class_g ?= 'Notify-osd'",
 	"class_g = 'Cairo-clock'",
-	"_GTK_FRAME_EXTENTS@:c"
+	"_GTK_FRAME_EXTENTS@:c",
+	"class_g = 'Synapse'"
 ];
 # shadow-exclude = "n:e:Notification";
 # shadow-exclude-reg = "x10+0+0";
 # xinerama-shadow-crop = true;
 
 # Opacity
-menu-opacity = 0.8;
-inactive-opacity = 0.8;
+menu-opacity = 0.5;
+inactive-opacity = 0.95;
 # active-opacity = 0.8;
-frame-opacity = 0.7;
+frame-opacity = 0.8;
 inactive-opacity-override = false;
 alpha-step = 0.06;
 # inactive-dim = 0.2;
