--- a/i3-gaps-ubuntu/config
+++ b/i3-gaps-ubuntu/config
@@ -182,3 +182,5 @@ bindsym $mod+Control+l exec xscreensaver-command -lock
 exec --no-startup-id tint2 &
 exec --no-startup-id compton -c --config ~/.config/compton/config &
 exec --no-startup-id xscreensaver -no-splash
+exec --no-startup-id nm-applet &
+exec --no-startup-id pasystray &
