disable trackpad tap on i3 ubuntu

--- a/i3-gaps-ubuntu/config
+++ b/i3-gaps-ubuntu/config
@@ -185,3 +185,6 @@ exec --no-startup-id xscreensaver -no-splash
 exec --no-startup-id nm-applet &
 exec --no-startup-id pasystray &
 exec --no-startup-id feh --bg-fill --randomize ~/pictures/desktopbackgrounds
+
+# disable trackpad tap
+exec synclient MaxTapMove=0
