--- a/compton/config
+++ b/compton/config
@@ -5,8 +5,8 @@ no-dock-shadow = true;
 clear-shadow = true;
 shadow-radius = 7;
 shadow-offset-x = -7;
-shadow-offset-y = -7;
-# shadow-opacity = 0.7;
+shadow-offset-y = -12;
+# shadow-opacity = 0.12;
 # shadow-red = 0.0;
 # shadow-green = 0.0;
 # shadow-blue = 0.0;
@@ -24,9 +24,10 @@ shadow-exclude = [
 
 # Opacity
 menu-opacity = 0.6;
-inactive-opacity = 0.95;
-# active-opacity = 0.8;
-frame-opacity = 0.8;
+menu-opacity = 0.7;
+inactive-opacity = 0.92;
+active-opacity = 0.8;
+frame-opacity = 0.6;
 inactive-opacity-override = false;
 alpha-step = 0.06;
 # inactive-dim = 0.2;
